--- a/Admin-Portal-Client/src/navBar.css
+++ b/Admin-Portal-Client/src/navBar.css
@@ -23,6 +23,7 @@
   .navbar-menu {
     display: flex;
     list-style: none;
+   
   }
   
   .navbar-item {
@@ -30,10 +31,14 @@
   }
   
   .navbar-link {
+    display:flex;
+    margin-left: 100px;
+    justify-content: center;
     color: #ecf0f1;
     text-decoration: none;
     font-size: 1rem;
     transition: color 0.3s ease;
+    margin-top: 10px;
   }
   
   .navbar-link:hover {
@@ -48,6 +53,8 @@
     cursor: pointer;
     font-size: 1rem;
     transition: all 0.3s ease;
+    padding-left: 10px;
+    margin-left: 200px;
   }
   
   .navbar-button:hover {
@@ -69,3 +76,5 @@
       margin-bottom: 0.5rem;
     }
   }
+
+  
