--- a/Admin-Portal-Client/src/navBar.css
+++ b/Admin-Portal-Client/src/navBar.css
@@ -29,6 +29,13 @@
   .navbar-item {
     margin-left: 20px;
   }
+
+  .user-name{
+    font-size: larger;
+    color: rgb(255, 255, 255);
+    margin-left: 120px;
+    margin-top: 8px;
+  }
   
   .navbar-link {
     display:flex;
